--- a/plays/keyvault/create_secret.yml
+++ b/plays/keyvault/create_secret.yml
@@ -5,8 +5,8 @@
   - name: create a kevyault secret
     azure_rm_keyvaultsecret:
       keyvault_uri: https://tmpkeyvault.vault.azure.net
-      secret_name: samplesecret
+      secret_name: playsecret
       secret_value: 'mysecret'
       tags:
-        testing: testing
+        testing: play
         delete: on-exit
