--- a/plays/keyvault/delete_secret.yml
+++ b/plays/keyvault/delete_secret.yml
@@ -6,4 +6,4 @@
     azure_rm_keyvaultsecret:
       keyvault_uri: https://tmpkeyvault.vault.azure.net
       state: absent
-      secret_name: samplesecret
+      secret_name: playsecret
